--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,9 @@
       "psr-4": {
           "App\\":"app"
       }
+  },
+  "require": {
+    "rmccue/requests": "^1.8",
+    "lavary/crunz": "^3.0"
   }
 }
